--- a/E.14-01-22.06-SG - June 2022/zamowienie.html
+++ b/E.14-01-22.06-SG - June 2022/zamowienie.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fabryka cukierków</title>
     <link rel="stylesheet" href="styl10.css">
+    <link rel="stylesheet" href="Skrypt.js">
 </head>
 <body>
     <section class="gorny-container">
